[package]
name = "openvr_sys_bindings"
version = "2.0.3"
authors = [
    "Colin Sherratt",
    "Erick Tryzelaar",
    "Rene Eichhorn",
    "Benjamin Saunders",
    "Mawco (https://mar.co.gg)"
]
license = "MIT"
description = "Raw unsafe system binding for openvr (updated fork of https://github.com/rust-openvr/rust-openvr-sys)"
repository = "https://github.com/Mawco/rust-openvr-sys"
keywords = ["vr", "vive", "steamvr", "openvr"]
categories = [ "hardware-support", "external-ffi-bindings" ]

exclude = [
    "openvr/samples/*",
    "openvr/bin/*",
    "openvr/lib/*",
    "openvr/controller_callouts/*",
]
build = "build.rs"

[badges]
maintenance = { status = "passively-maintained" }

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.69.1", optional = true }

[lib]
name = "openvr_sys_bindings"
path = "lib.rs"

[features]
default = []
buildtime_bindgen = ["bindgen"]
